<resources>
    <string name="app_name">Exam</string>
    <string name="SignIN">Sign In</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="ForgotPassword">Forgot Password ?</string>
    <string name="RememberMe">Remember Me</string>
    <string name="Login">Login</string>
    <string name="Or">-Or-</string>
    <string name="SignInWith">SignInWith</string>
    <string name="NoAccount">Don\'t have an Account</string>
    <string name="SignUP">Sign UP</string>
    <string name="FullName">Full Name</string>
    <string name="Phone">Phone No</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Register">Register</string>
    <string name="HaveAccount"> Have an Account</string>
</resources>