<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/myBackGround."
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.widget.Button
        android:id="@+id/SignUP"
        style="@style/MyLinks."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignUP"
        app:layout_constraintBottom_toBottomOf="@+id/NoAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/NoAccount"
        app:layout_constraintTop_toTopOf="@+id/NoAccount"
        app:layout_constraintVertical_bias="0.529" />

    <TextView
        android:id="@+id/PasswordText"
        android:layout_width="64dp"
        android:layout_height="15dp"
        android:layout_marginBottom="0dp"
        style="@style/AllTexts."
        android:text="@string/Password"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <android.widget.Button
        android:id="@+id/Login"
        style="MyButton."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/login_register"
        android:backgroundTint="@color/white"
        android:text="@string/Login"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/Or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignIN"
        style="@style/MyTitle."
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="80dp" />

    <TextView
        android:id="@+id/NoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NoAccount"
        style="@style/AllTexts."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/SignUP"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="113dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        style="@style/MyInputs."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="300dp"
        android:height="100dp"
        android:drawableLeft="@drawable/baseline_key_24"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/ForgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordText" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        style="@style/MyInputs."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:width="300dp"
        android:height="70dp"
        android:drawableLeft="@drawable/baseline_email_24"
        android:ems="10"
        android:hint="email\@gmail.com"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/PasswordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Emailtext" />

    <TextView
        android:id="@+id/Emailtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        style="@style/AllTexts."
        android:text="@string/Email"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/ForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ForgotPassword"
        style="@style/AllTexts."
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <TextView
        android:id="@+id/Or"
        style="@style/AllTexts."
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/Or"
        app:layout_constraintBottom_toTopOf="@+id/SignWith"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login" />

    <TextView
        android:id="@+id/SignWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/SignInWith"
        style="@style/AllTexts."
        app:layout_constraintBottom_toTopOf="@+id/facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Or" />

    <android.widget.Button
        android:id="@+id/facebook"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginRight="10dp"
        app:layout_goneMarginBottom="30dp"
        android:paddingLeft="5dp"
        style="MyButton."
        android:layout_marginBottom="30dp"
        android:background="@drawable/facebookt_witter"
        android:drawableLeft="@drawable/facebook_svgrepo_com"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignWith" />

    <android.widget.Button
        android:id="@+id/button3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:paddingLeft="5dp"
        style="MyButton."
        android:background="@drawable/facebookt_witter"
        android:drawableStart="@drawable/google_svgrepo_com"
        app:layout_constraintBottom_toBottomOf="@+id/facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/facebook"
        app:layout_constraintTop_toTopOf="@+id/facebook" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="284dp"
        android:text="@string/RememberMe"
        android:backgroundTint="@color/white"
        style="@style/AllTexts."
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>